--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@ document.addEventListener('DOMContentLoaded', function () {
       'add_subscription_clashx': { 'fa': 'اضافه کردن اشتراک به ClashX', 'en': 'Add subscription to ClashX', 'ru': 'Добавить подписку в ClashX' },
       'invalid_link': { 'fa': 'لینک نامعتبر است!', 'en': 'Invalid link!', 'ru': 'Недействительная ссылка!' },
       'qr_generation_failed': { 'fa': 'خطا در تولید QR Code!', 'en': 'Failed to generate QR Code!', 'ru': 'Не удалось сгенерировать QR-код!' },
-      'favorite_location': { 'fa': 'نود پرمصرف: ', 'en': 'Most Used Node: ', 'ru': 'Наиболее используемый узел: ' },
+      'favorite_location': { 'fa': 'لوکیشن پرمصرف: ', 'en': 'location high consumption:', 'ru': 'Любимое место:' },
       'no_usage_data': { 'fa': 'داده‌ای برای مصرف نودها یافت نشد', 'en': 'No usage data found for nodes', 'ru': 'Данные об использовании узлов не найдены' },
       'ping': { 'fa': 'پینگ: ', 'en': 'Ping: ', 'ru': 'Пинг: ' },
       'ms': { 'fa': ' میلی‌ثانیه', 'en': ' ms', 'ru': ' мс' },
